<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fanuc_m900ib_support</name>
  <version>0.5.1</version>
  <description>
    <p>
      ROS-Industrial support for the Fanuc M-900iB (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc M-900iB manipulators. This currently includes the /700 variant
      only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>M-900iB/700 - Standard Flange</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>FANUC Robot M-900iB/700 Mechanical Unit Operator's Manual</em>
      version <em>B-83444EN/01</em>. All urdfs are based on the default motion
      and joint velocity limits, unless noted otherwise (ie: no support for
      high speed joints, extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p>
      <b>Note 1</b>: the xacro for the /700 variant includes optional geometry
      for the forklift pockets, balancers and counterweight that can be
      enabled and disabled to correspond to the robot's actual configuration.
      By default, only the balancers and the counterweight are included, but
      this can be changed by making use of the provided xacro macro.
    </p>
    <p>
      <b>Note 2</b>: visualisation of the balancers and the counterweight is
      an approximation only and may not always accurately represent the state
      of the physical robot.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fanuc_resources</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
    <rosindex>
      <tags>
        <tag>description</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>m900ib</tag>
        <tag>ros-industrial</tag>
        <tag>support_package</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
